--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,7 @@ a {
   opacity: 0.1;
   z-index: 2;
   position: relative;
+  visibility: visible;
 }
 
 .p0 {
@@ -67,7 +68,17 @@ a {
 }
 
 .dot.hidden {
-  opacity: 0;
+  visibility: hidden;
+}
+
+.dot.antihighlight {
+  opacity: 0.01;
+}
+
+.dot.highlight {
+  opacity: 1;
+  visibility: visible;
+  stroke: black;
 }
 
 input[type='range'] {
