--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,4 +99,11 @@ input[type='range'] {
 .tooltip-text {
   background-color: white;
   z-index: 5;
+  padding: 5px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  visibility: hidden;
+}
+
+.tooltip-text > p {
+  margin: 0;
 }
