--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -143,3 +143,11 @@ input[type='range'] {
   margin: 0;
   font-size: 16px;
 }
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
